@@ -6,6 +6,9 @@
     enter characters. Use Insert or Delete keys to toggle between the
     new and old behavior.
 
+  * "SetBookmark ?" and "GotoBookmark ?" now prompt for the bookmark you
+    want to set/goto. The prompt also indicates which bookmarks are set.
+
 3.0  2015-06-18
 
   * ne is now fully 64-bit, and needs to be compiled by a C99-compliant
